# Coursework-8-Docker

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  apps.py  models.py  paginations.py  permissions.py  serialezers.py  serializers.py  services.py  tasks.py  tests.py  validators.py  views.py
habits/management/commands/: csu.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_action_alter_habit_is_nice_habit_and_more.py
users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
